Bug 436305 - "Global theme" entry is not always highlighted in blue after click on "Appearance" category
Summary: "Global theme" entry is not always highlighted in blue after click on "Appear...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: sidebarview (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-04-28 12:49 UTC by Patrick Silva
Modified: 2021-05-06 14:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.22
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-04-28 12:49:09 UTC
STEPS TO REPRODUCE
1. open System Settings
2. click on "Appearance" in the sidebar (notice that "Global Theme" is not highlighted in blue)
3. click on any entry below "Global Theme"
4. click on another entry in the sidebar
5. click on "Appearance" again: now "Global Theme" is highlighted in blue as expected

EXPECTED RESULT
"Global Theme" should always be highlighted in blue after click on "Appearance"

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.21.80
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 Nate Graham 2021-04-28 19:49:15 UTC
Can confirm.
Comment 2 Marco Martin 2021-05-06 12:23:12 UTC
Git commit cdc219c227452aacfcff0fb82d35b4bbdd7b91aa by Marco Martin.
Committed on 06/05/2021 at 12:09.
Pushed by mart into branch 'master'.

higlight global theme after clicking appearance

we didn't when the category had a library to accomodate the
old behavior of category owner in the title. now
that isn't like that anymore properly highlight the entry

M  +1    -5    sidebar/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/commit/cdc219c227452aacfcff0fb82d35b4bbdd7b91aa