higlight global theme after clicking appearance

we didn't when the category had a library to accomodate the
old behavior of category owner in the title. now
that isn't like that anymore properly highlight the entry

BUG:436305